5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1644_2447.log
== TEST (2019-04-10 12:09:27) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 < var2 :
	print("Troco de", var2 - var1)
else :	
-- ERROR:
File "XXXX", line 7
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:10:16) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 < var2 :
	print("Troco de", var2 - var1)
else:
	print(Var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(Var1)
NameError: name 'Var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:10:23) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 < var2 :
	print("Troco de", var2 - var1)
else:
	print(Var1)
-- EXECUTION TIME:
0.137325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2447/main.py", line 7, in <module>
    print(Var1)
NameError: name 'Var1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:12:03) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print(Var2 - var1)
-- OUTPUT:
Falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:12:16) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print(var2 - var1)
-- OUTPUT:
Falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:12:24) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print(var2 - var1)
-- EXECUTION TIME:
0.21214
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:12:24) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print(var2 - var1)
-- OUTPUT:
Falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:13:01) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print("Troco", round(var2 - var1))
-- OUTPUT:
Falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:13:09) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print("Troco", round(var2 - var1))
-- EXECUTION TIME:
0.204116
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco 28
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:13:45) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print("Troco de ", round(var2 - var1))
-- OUTPUT:
Falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:14:09) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  round(var1 - var2))
else:
	print("Troco de ", round(var2 - var1))
-- OUTPUT:
Falta 26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:14:40) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  float(round(var1 - var2)))
else:
	print("Troco de ", float(round(var2 - var1))
-- ERROR:
File "XXXX", line 8
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:14:44) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  float(round(var1 - var2)))
else:
	print("Troco de ", float(round(var2 - var1)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:14:49) 
-- CODE:
var1= float(input("Preco: "))
var2= float(input("Valor pago : "))

if var1 > var2 :
	print("Falta",  float(round(var1 - var2)))
else:
	print("Troco de ", float(round(var2 - var1)))
-- EXECUTION TIME:
0.136582
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
